--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://10.112.207.78:3306/douban_beijing?useUnicode=true&characterEncoding=utf8
-jdbc.url=jdbc:mysql://10.112.51.193:3306/discretion?useUnicode=true&characterEncoding=utf8
+#jdbc.url=jdbc:mysql://10.112.51.193:3306/discretion?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://10.112.51.193:3306/recommender?useUnicode=true&characterEncoding=utf8
 jdbc.username=douban
 jdbc.password=douban_mysql_817
