登录注册退出

--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.47</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.4.1</version>
+    </dependency>
   </dependencies>
 
   <build>
